--- a/public/styles.css
+++ b/public/styles.css
@@ -51,7 +51,7 @@ h4,
 h5,
 h6,
 p {
-  font-weight: 400;
+  line-height: 1.5;
 }
 
 p,
@@ -198,11 +198,26 @@ header {
 }
 
 .notes-container {
+  position: relative;
   margin: 1.5em 1em;
   max-width: 40ch;
   background-color: hsl(0, 11%, 95%);
   padding: 1em 0.5em;
   border-radius: 1em;
+}
+
+.delete-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  position: absolute;
+  bottom: -1em;
+  right: 1em;
+  width: 50px;
+  height: 50px;
+  background-color: hsl(var(--clr-light));
+  padding: 1em;
+  border-radius: 50%;
 }
 
 footer {
@@ -211,4 +226,35 @@ footer {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.create-area-container {
+  position: relative;
+  flex-direction: column;
+  background-color: hsl(0, 11%, 95%);
+  border-radius: 1em;
+  margin: 1em auto;
+  padding: 1em 1.5em;
+  width: 40%;
+  max-width: 600px;
+}
+
+.create-area-container form {
+  display: flex;
+  gap: 0.5em;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.create-area-container > form > textarea {
+  max-width: 100%;
+}
+.create-area-container > form > button {
+  position: absolute;
+  bottom: -1.5em;
+  right: 1em;
+  max-width: 50px;
+  padding: 0.5em;
+  border-radius: 50%;
+  background-color: hsl(var(--clr-light));
 }
