--- a/public/styles.css
+++ b/public/styles.css
@@ -64,6 +64,7 @@ body {
   font-family: var(--ff-serif);
   font-size: var(--fs-400);
   color: hsl(var(--clr-dark));
+  background-image: url("https://www.transparenttextures.com/patterns/always-grey.png");
   background-color: hsl(var(--clr-accent));
   line-height: 1.5;
   min-height: 100vh;
@@ -83,6 +84,13 @@ textarea,
 select {
   font: inherit;
   color: inherit;
+}
+
+input,
+textarea,
+button {
+  outline: none;
+  border: none;
 }
 
 /* remove animations for people who've turned them off */
@@ -203,18 +211,18 @@ header {
   max-width: 40ch;
   background-color: hsl(0, 11%, 95%);
   padding: 1em 0.5em;
-  border-radius: 1em;
+  border-radius: 0.5em;
 }
 
 .delete-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   bottom: -1em;
   right: 1em;
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   background-color: hsl(var(--clr-light));
   padding: 1em;
   border-radius: 50%;
@@ -246,8 +254,14 @@ footer {
   justify-content: center;
 }
 
+.create-area-container > form > input {
+  background-color: hsl(0, 11%, 95%);
+}
+
 .create-area-container > form > textarea {
+  resize: none;
   max-width: 100%;
+  background-color: hsl(0, 11%, 95%);
 }
 .create-area-container > form > button {
   position: absolute;
